@@ -1,0 +1,32 @@
+#!/bin/sh
+
+# Check that double quotes (`"') are not improperly passed down in
+# ratfor output.
+
+. ./defs.sh || exit 99
+
+cat > tst.r <<EOF
+if (is_foo)
+    foo()
+else if (is_bar)
+    bar()
+else
+    quux()
+EOF
+
+cat tst.r
+
+run_RATFOR -e 0 tst.r || testcase_FAIL
+grep -v '^[cC]' stdout >stdout-t
+mv stdout-t stdout
+
+$FGREP 'goto' stdout && testcase_FAIL
+$FGREP 'then' stdout || testcase_FAIL
+$FGREP 'else' stdout || testcase_FAIL
+$FGREP 'endif' stdout || testcase_FAIL
+test `$FGREP 'then' stdout | wc -l` -eq 2 || testcase_FAIL
+test `$FGREP 'endif' stdout | wc -l` -eq 2 || testcase_FAIL
+
+testcase_PASS
+
+# vim: ft=sh ts=4 sw=4 et
