@@ -2,7 +2,9 @@ List of user-visible changes of Public Domain Ratfor.
 
 New in XXX
 -----------
- 
+ * Since Fortran 77 is ubiquitous today, and Fortran 66 almost forgotten,
+   Ratfor now output Fortran 77 code, without bothering anymore about
+   Fortran 66 compatibility.
  * The `string' directive is no more recognized.  It should be superseded
    by the improved string-handling capabilities of Fortran 77.
  * The handling of the `-o' has been improved; in particular
